@@ -4040,7 +4040,7 @@ eol_post[int directive_token, bool markblockzero] {
                 - when ??? for cppmode
 
         */
-        if ((zeromode) ||
+        if ((!checkOption(OPTION_CPP_MARKUP_IF0) && zeromode) ||
             (!checkOption(OPTION_CPP_MARKUP_ELSE) && skipelse) ||
             (inputState->guessing && skipelse) ||
             (!cppmode.empty() && !cppmode.top().isclosed && cppmode.top().skipelse)
